# 8-bit-microprocessor

./: .gitignore  README.md  headers.h  main.c  micro_processor.c
base/: main.c  processor.c  processor.h  teste.c
pico/: CMakeLists.txt  main.c  micro_processor.c  micro_processor.h  pico.c  pico.h  processor.c  processor.h
